<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".activities.ItemDetails">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/back_layout" />

    <ImageView
        android:id="@+id/ticketIV"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="fitXY" />
    <TableLayout
        android:stretchColumns="1"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow
            android:layout_marginTop="10dp">
            <TextView
                android:textSize="18sp"
                android:fontFamily="@font/estre"
                android:padding="3dip"
                android:text="@string/first_name"
                android:textColor="@color/colorPrimaryDark" />
            <TextView
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:id="@+id/nameTV"
                android:fontFamily="@font/estre"
                android:padding="3dip"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/grey" />
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp">
            <TextView
                android:textSize="18sp"
                android:fontFamily="@font/estre"
                android:padding="3dip"
                android:text="@string/departure_city"
                android:textColor="@color/colorPrimaryDark" />
            <TextView
                android:textSize="18sp"

                android:layout_marginLeft="10dp"
                android:fontFamily="@font/estre"
                android:id="@+id/pickupET"
                android:gravity="start"
                android:padding="3dip"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark" />
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp">
            <TextView
                android:textSize="18sp"
                android:fontFamily="@font/estre"
                android:padding="3dip"
                android:text="@string/departure_date"
                android:textColor="@color/colorPrimaryDark" />
            <TextView
                android:textSize="18sp"

                android:fontFamily="@font/estre"
                android:layout_marginLeft="10dp"
                android:id="@+id/pickypdateEt"
                android:gravity="start"
                android:padding="3dip"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp">
            <TextView
                android:textSize="18sp"

                android:fontFamily="@font/estre"
                android:padding="3dip"
                android:text="@string/arrival_city"
                android:textColor="@color/colorPrimaryDark" />
            <TextView
                android:enabled="false"
                android:fontFamily="@font/estre"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                android:id="@+id/destTV"
                android:gravity="start"
                android:padding="3dip"
                android:textColor="@color/black"
                android:textColorHint="@color/grey" />
        </TableRow>


        <TableRow
            android:layout_marginTop="10dp">
            <TextView
                android:textSize="18sp"
                android:fontFamily="@font/estre"
                android:padding="3dip"
                android:text="@string/arrival_date"
                android:textColor="@color/colorPrimaryDark" />
            <TextView
                android:textSize="18sp"

                android:layout_marginLeft="10dp"
                android:fontFamily="@font/estre"
                android:id="@+id/destDateTV"
                android:gravity="start"
                android:padding="3dip"
                android:textColor="@color/black"
                android:textColorHint="@color/grey" />
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp">
            <TextView
                android:textSize="18sp"

                android:fontFamily="@font/estre"
                android:padding="3dip"
                android:text="@string/flight_number"
                android:textColor="@color/colorPrimaryDark" />
            <TextView
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/estre"
                android:id="@+id/flightTV"
                android:gravity="start"
                android:padding="3dip"
                android:textColor="@color/black"
                android:textColorHint="@color/grey" />
        </TableRow>
        <TableRow
            android:layout_marginTop="10dp">
            <TextView
                android:textSize="18sp"
                android:fontFamily="@font/estre"
                android:padding="3dip"
                android:text="@string/notes"
                android:textColor="@color/colorPrimaryDark" />
            <TextView
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/estre"
                android:gravity="start"
                android:text="@string/if_any"
                android:padding="3dip"
                android:textColor="@color/black"
                android:textColorHint="@color/grey" />
        </TableRow>
    </TableLayout>
</LinearLayout>
    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/imageLay"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
       android:id="@+id/image_back"
        android:layout_margin="10dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/back_arrow"
        android:padding="15dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/image_full"/>
    </RelativeLayout>

</RelativeLayout>