<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<ScrollView
    android:fillViewport="true"
    android:scrollbars="none"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_color">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".activities.ItemDetails">
    <include layout="@layout/back_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true" />

        <me.relex.circleindicator.CircleIndicator
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <TableLayout
        android:stretchColumns="1"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow
            android:layout_marginTop="10dp">
            <TextView
                android:textSize="18sp"
                android:fontFamily="@font/asap"
                android:padding="3dip"
                android:text="@string/product_name"
                android:textColor="@color/colorPrimaryDark" />
            <TextView
                android:textSize="18sp"

                android:layout_marginLeft="10dp"
                android:id="@+id/productNameTv"
                android:fontFamily="@font/asap"
                android:padding="3dip"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/grey" />
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp">
            <TextView
                android:textSize="18sp"

                android:fontFamily="@font/asap"
                android:padding="3dip"
                android:text="@string/product_description"
                android:textColor="@color/colorPrimaryDark" />
            <TextView
                android:textSize="18sp"

                android:layout_marginLeft="10dp"
                android:fontFamily="@font/asap"
                android:id="@+id/descTV"
                android:gravity="start"
                android:padding="3dip"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark" />
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp">
            <TextView
                android:textSize="18sp"

                android:fontFamily="@font/asap"
                android:padding="3dip"
                android:text="@string/product_weight"
                android:textColor="@color/colorPrimaryDark" />
            <TextView
                android:textSize="18sp"

                android:fontFamily="@font/asap"
                android:layout_marginLeft="10dp"
                android:id="@+id/weightTV"
                android:gravity="start"
                android:padding="3dip"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp">
            <TextView
                android:textSize="18sp"

                android:fontFamily="@font/asap"
                android:padding="3dip"
                android:text="@string/money_to_be_earned"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/priceTV"
                android:layout_marginLeft="10dp"
                android:enabled="false"
                android:fontFamily="@font/asap"
                android:gravity="start"
                android:padding="3dip"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="18sp"
                app:fontFamily="@font/asap" />
        </TableRow>


        <TableRow
            android:layout_marginTop="10dp">
            <TextView
                android:textSize="18sp"

                android:fontFamily="@font/asap"
                android:padding="3dip"
                android:text="@string/pickup_location"
                android:textColor="@color/colorPrimaryDark" />
            <TextView
                android:textSize="18sp"

                android:layout_marginLeft="10dp"
                android:fontFamily="@font/asap"
                android:id="@+id/pickupTV"
                android:gravity="start"
                android:padding="3dip"
                android:textColor="@color/black"
                android:textColorHint="@color/grey" />
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp">
            <TextView
                android:textSize="18sp"

                android:fontFamily="@font/asap"
                android:padding="3dip"
                android:text="@string/destination_location"
                android:textColor="@color/colorPrimaryDark" />
            <TextView
                android:textSize="18sp"

                android:layout_marginLeft="10dp"
                android:fontFamily="@font/asap"
                android:id="@+id/destinationTV"
                android:gravity="start"
                android:padding="3dip"
                android:textColor="@color/black"
                android:textColorHint="@color/grey" />
        </TableRow>
        <TableRow
            android:layout_marginTop="10dp">
            <TextView
                android:textSize="18sp"

                android:fontFamily="@font/asap"
                android:padding="3dip"
                android:text="@string/payment_mode"
                android:textColor="@color/colorPrimaryDark" />
            <TextView
                android:textSize="18sp"

                android:layout_marginLeft="10dp"
                android:fontFamily="@font/asap"
                android:id="@+id/paymentTV"
                android:gravity="start"
                android:padding="3dip"
                android:textColor="@color/black"
                android:textColorHint="@color/grey" />
        </TableRow>
    </TableLayout>


        <Button
            android:layout_marginTop="30dp"
            android:layout_gravity="bottom|center_horizontal"
            android:id="@+id/book_btn"
            android:textColor="@color/white"
            android:text="@string/book_now"
            android:layout_marginBottom="10dp"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:background="@drawable/btn"/>
</LinearLayout>
</ScrollView>
</LinearLayout>