<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:background="@drawable/rect_bg"
android:padding="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="15sp"
            android:fontFamily="@font/asap"
            android:text="Update Profile"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_gravity="center"
            android:layout_width="110dp"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"/>

        <TableLayout
            android:stretchColumns="1"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableRow
                android:layout_marginTop="10dp">
                <TextView
                    android:fontFamily="@font/asap"
                    android:padding="3dip"
                    android:text="@string/full_name"
                    android:textColor="@color/colorPrimary" />
                <EditText
                    android:layout_marginLeft="10dp"
                    android:id="@+id/fullnameET"
                    android:fontFamily="@font/asap"
                    android:background="@drawable/edit_text_style"
                    android:hint="@string/full_name"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:padding="3dip"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey" />
            </TableRow>

            <TableRow
                android:layout_marginTop="10dp">
                <TextView
                    android:fontFamily="@font/asap"
                    android:padding="3dip"
                    android:text="Street"
                    android:textColor="@color/colorPrimary" />
                <EditText
                    android:id="@+id/streetET"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/edit_text_style"
                    android:fontFamily="@font/asap"
                    android:gravity="start"
                    android:hint="Street"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:padding="3dip"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey" />
            </TableRow>
            <TableRow
                android:layout_marginTop="10dp">
                <TextView
                    android:fontFamily="@font/asap"
                    android:padding="3dip"
                    android:text="@string/location"
                    android:textColor="@color/colorPrimary" />
                <EditText
                    android:layout_marginLeft="10dp"

                    android:fontFamily="@font/asap"
                    android:id="@+id/cityEt"
                    android:background="@drawable/edit_text_style"
                    android:gravity="start"
                    android:hint="@string/location"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:padding="3dip"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey" />
            </TableRow>
            <TableRow
                android:layout_marginTop="10dp">
                <TextView
                    android:fontFamily="@font/asap"
                    android:padding="3dip"
                    android:text="Postal/Zip code"
                    android:textColor="@color/colorPrimary" />
                <EditText
                    android:id="@+id/postalET"

                    android:layout_marginLeft="10dp"
                    android:background="@drawable/edit_text_style"
                    android:fontFamily="@font/asap"
                    android:gravity="start"
                    android:hint="Postal/Zip code"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:padding="3dip"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey" />
            </TableRow>

            <TableRow
                android:layout_marginTop="10dp">
                <TextView
                    android:fontFamily="@font/asap"

                    android:padding="3dip"
                    android:text="@string/email"
                    android:textColor="@color/colorPrimary" />
                <EditText
                    android:fontFamily="@font/asap"
                    android:layout_marginLeft="10dp"

                    android:id="@+id/EmailEt"
                    android:background="@drawable/edit_text_style"
                    android:gravity="start"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:padding="3dip"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey" />
            </TableRow>

            <TableRow
                android:layout_marginTop="10dp">
                <TextView
                    android:fontFamily="@font/asap"

                    android:padding="3dip"
                    android:text="@string/phone_no"
                    android:textColor="@color/colorPrimary" />
                <EditText
                    android:enabled="false"
                    android:fontFamily="@font/asap"
                    android:layout_marginLeft="10dp"

                    android:id="@+id/phoneNumberEditText"

                    android:background="@drawable/edit_text_style"
                    android:gravity="start"
                    android:hint="@string/phone_no"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:padding="3dip"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey" />
            </TableRow>


            <TableRow
                android:visibility="gone"
                android:layout_marginTop="10dp">
                <TextView
                    android:fontFamily="@font/asap"

                    android:padding="3dip"
                    android:text="@string/account_no"
                    android:textColor="@color/colorPrimary" />
                <EditText
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/asap"
                    android:id="@+id/accountEt"
                    android:background="@drawable/edit_text_style"
                    android:gravity="start"
                    android:hint="@string/account_no"
                    android:imeOptions="actionDone"
                    android:padding="3dip"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/updateIDTV"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:visibility="visible"
            android:drawablePadding="5dp"
            android:drawableLeft="@drawable/upload_blue"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/asap"
            android:text="Upload valid id card"/>

        <ImageView
            android:visibility="gone"
            android:background="@color/black"
            android:scaleType="fitCenter"
            android:id="@+id/idIV"
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="120dp"
                android:layout_height="32dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/grey_bg"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/update_button"
                android:layout_width="120dp"
                android:layout_height="32dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/cancel_button"
                android:layout_toRightOf="@+id/cancel_button"
                android:background="@drawable/blue_btn"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>